[package]
name = "orb-kit"
description = "Proof of Humanity (PoH) issuer package for World ID."
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["World Contributors"]
readme = "./README.md"
repository = "https://github.com/worldcoin/orb-kit"
keywords = ["poh", "worldid", "world", "identity", "orb"]
categories = ["authentication", "api-bindings"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[lints.rust]
missing_docs = "deny"
dead_code = "deny"

[dependencies]
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
walletkit-db = { path = "../walletkit/walletkit-db" }

[dev-dependencies]
tempfile = "3"
